# FhirOpenEhrBridge

./: .dockerignore  .gitignore  CONTRIBUTING.md  Directory.Build.props  FhirOpenEhrBridge.sln  LICENSE-CC-BY.txt  LICENSE-MIT.txt  README.md  docker-compose.yml
.github/workflows/: build-and-test.yml  cd-gitops.yml  codeql.yml  docker-publish.yml  dotnet-build-and-test.yml  dotnet-codeql.yml  dotnet-docker-publish.yml  dotnet-publish-nuget.yml  go-ci.yml  java-ci.yml  nodejs-ci.yml  publish-nuget.yml  python-ci.yml  release-images.yml  rust-ci.yml
deploy/argocd/: application-dev.yaml  application-prod.yaml  project.yaml
docs/: DEPLOYMENT.md  IRELAND-CROSSBORDER.md  POLYGLOT.md
dotnet/: README.md
go/: .gitignore  Dockerfile  README.md  go.mod
go/bridge/: gender.go  mappers.go  (+5 more)
java/: Dockerfile  README.md  pom.xml
nodejs/: .dockerignore  .gitignore  Dockerfile  README.md  cucumber.js  jest.config.js  package-lock.json  package.json  tsconfig.json
python/: Dockerfile  README.md  pyproject.toml
python/deploy/k8s/: deployment.yaml  kustomization.yaml  service.yaml
python/features/steps/: steps.py
python/src/fhir_openehr_bridge/: __init__.py  api.py  cli.py  gender.py  mappers.py  models.py  service.py  validation.py
python/tests/: test_mappers.py
rust/: .gitignore  Cargo.toml  Dockerfile  README.md
rust/deploy/k8s/: deployment.yaml  kustomization.yaml  service.yaml
rust/src/: gender.rs  lib.rs  mappers.rs  models.rs  service.rs  validation.rs
rust/tests/: bdd.rs
samples/: README.md  requests-ireland.http  requests.http
scripts/: smoke-test.sh
(+129 files in other folders)
